# channel-contracts

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: ci.yml
artifacts/: checksums.txt  omniflix_channel.wasm
contracts/omniflix-channel/: Cargo.toml
contracts/omniflix-channel/src/: access_control.rs  bank_helpers.rs  channels.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  playlist.rs  random.rs  state.rs  string_validation.rs
contracts/omniflix-channel/src/testing/: app.rs  stargate.rs  utils.rs
contracts/omniflix-channel/src/testing/tests/: channels.rs  mod.rs
deployment-scripts/: .gitignore  package.json  tsconfig.json
deployment-scripts/configs/: chain_config.json  deployment_config.example.ts  test_accounts.example.ts
deployment-scripts/src/helpers/: authz.helper.ts  channel.helper.ts  context.ts  onft.helper.ts
deployment-scripts/src/scripts/: add-asset-to-playlist.ts  add-reserved-usernames.ts  admin-create-channel.ts  admin-remove-assets.ts  authz-operations.ts  channel-update.ts  create-channel.ts  create-playlist.ts  delete-channel.ts  deploy-channel-contract.ts  flag-asset.ts  follow.ts  manage-assets-in-playlist.ts  publish-asset.ts  remove-asset-from-playlist.ts  set-channel-config.ts
deployment-scripts/src/simulations/: simulation_1.ts  simulation_2.ts  simulation_3.ts
deployment-scripts/src/types/: OmniFlixChannel.client.ts  OmniFlixChannel.message-composer.ts  OmniFlixChannel.types.ts  index.ts
deployment-scripts/src/utils/: client.ts  datetime.ts  logger.ts  time.ts
deployment-scripts/tmp/: test_cache.json
scripts/: cleanup.sh  release.sh  schema.sh
src/: channels.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  pauser.rs  playlist.rs  state.rs
src/testing/: mod.rs  setup.rs  stargate.rs  utils.rs
src/testing/tests/: channels.rs  create_channel.rs  instantiate.rs  mod.rs  playlist.rs  publish.rs
tests/: Cargo.toml
tests/src/helpers/: mod.rs  msg_wrapper.rs  setup.rs  utils.rs
tests/src/tests/: channels.rs  instantiate.rs  mod.rs  playlist.rs  publish.rs
tests/src/tests/admin/: mod.rs  remove_assets.rs  set_config.rs
tests/src/tests/assets/: flag.rs  mod.rs  publish.rs  unpublish.rs  update_details.rs
tests/src/tests/channels/: channels.rs  collaborators.rs  create.rs  delete.rs  follow.rs  manage_reserved_usernames.rs  mod.rs  set_channel_details.rs  tipping.rs  update_channel_details.rs
tests/src/tests/playlist/: add_asset.rs  create.rs  delete.rs  mod.rs  refresh_playlist.rs  remove_asset_from_playlist.rs
tests/src/tests/publish/: publish.rs
ts/: codegen_script.ts
ts/types/: OmniFlixChannel.client.ts  OmniFlixChannel.message-composer.ts  OmniFlixChannel.types.ts
