[workspace]
members = [
    "contracts/*",
    "tests",
    "packages/*"
]

resolver = "2"


[workspace.package]
version    = "0.0.1-beta"
edition    = "2021"
homepage   = ""
repository = ""
license    = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema = "1.5.5"
schemars             = "0.8.11"
cosmwasm-std    = { version = "1.5.5", features = ["iterator", "staking", "stargate", "cosmwasm_1_2"] }
omniflix-std         = "1.0.0-beta"
cw-controllers       = "1.1.0"
cw2                  = "1.1.0"
cw4                  = "1.1.0"
cw4-group            = "1.1.0"
cw721                = "0.18.0"
cw721-base           = "0.18.0"
cw-storage-plus      = "1.1.0"
cw-utils             = "1.0.1"
thiserror            = "1.0.31"
semver               = "1"
cw-ownable           = "0.5.1"
cosmwasm-storage     = "1.5.0"
serde                = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4.3"
rand_core       = { version = "0.6.4", default-features = false }
rand_xoshiro    = { version = "0.6.0", default-features = false }
cw-multi-test = "0.20.0"
prost = {version = "0.12.3", default-features = false, features = ["prost-derive"]}
anyhow = "1.0.79"
testing = { path = "packages/testing" }
omniflix-channel = { path = "contracts/omniflix-channel" }
pauser = { path = "packages/pauser" }
channel-manager = { path = "packages/channel-manager" }
asset-manager = { path = "packages/asset-manager" }
